Fix specs wrapping

--- a/css/theme.scss
+++ b/css/theme.scss
@@ -1878,7 +1878,6 @@ ul.items {
         }
         span {
           max-width: 180px;
-          overflow: hidden;
         }
       }
     }
